--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Gemma Repiso-Puigdelliura"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Gemma Repiso Puigdelliura"
-description              : &description "PhD Student Spanish Linguistics UCLA"
-url                      : https://grepiso.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Your Name"
+description              : &description "personal description"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "grepiso.github.io"
+repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -56,7 +56,19 @@ alexa_site_verification  :
 yandex_site_verification :
 
 # Social Sharing
-
+twitter:
+  username               : &twitter
+facebook:
+  username               :
+  app_id                 :
+  publisher              :
+og_image                 :  # Open Graph/Twitter default site image
+# For specifying social profiles
+# - https://developers.google.com/structured-data/customize/social-profiles
+social:
+  type                   : # Person or Organization (defaults to Person)
+  name                   : # If the user or organization name differs from the site's name
+  links: # An array of links to social media profiles
 
 
 # Analytics
@@ -68,15 +80,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Gemma Repiso Puigdelliura"
+  name             : "Your Sidebar Name"
   avatar           : "profile.png"
-  bio              : "PhD Student Spanish Linguistics, UCLA"
-  location         : "Los Angeles"
+  bio              : "Your biography for the left-hand sidebar"
+  location         : "Location"
   employer         :
-  
- 
-  email            : "grepisopu@ucla.edu"
-  researchgate     :  "https://www.researchgate.net/profile/Gemma_Repiso"
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  googlescholar    : "http://yourfullgooglescholarurl.com"
+  email            :
+  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
   codepen          :
@@ -84,17 +96,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "grepiso"
+  github           : "academicpages"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "https://orcid.org/0000-0001-8269-2378"
+  orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
-
+  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  steam            :
+  tumblr           :
+  twitter          : "replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
