--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Gemma Repiso Puigdelliura"
 title_separator          : "-"
 name                     : &name "Gemma Repiso Puigdelliura"
 description              : &description "PhD Candidate Hispanic Linguistics"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://gemmarepiso.github.io/gemmarepisopu.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://gemmarepiso.github.io/gemmarepisopui/"
+repository               : "https://gemmarepiso.github.io/gemmarepisopu.github.io/"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
