--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description              : &description "PhD Candidate Hispanic Linguistics"
 url                      : https://gemmarepiso.github.io/gemmarepisopu.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://gemmarepiso.github.io/gemmarepisopu.github.io/"
-teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   : "gemma_professional.JPG"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
