--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Gemma Repiso Puigdelliura"
 title_separator          : "-"
 name                     : &name "Gemma Repiso Puigdelliura"
 description              : &description "PhD Candidate Hispanic Linguistics"
-url                      : https://gemmarepiso.github.io/gemmarepisopu.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://gemmarepiso.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://gemmarepiso.github.io/"
 teaser                   : "/images/gemma_professional.jpg"
