--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gemma Repiso Puigdelliura"
-  avatar           : "profile.png"
+  avatar           : "gemma.jpg"
   bio              : "PhD Candidate"
   location         : "Los Angeles"
   employer         :
