--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,10 +9,7 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "News"
+  - title: "Resources"
     url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
     
   
