--- a/_config.yml
+++ b/_config.yml
@@ -84,10 +84,10 @@ author:
   avatar           : "gemma.jpg"
   bio              : "PhD Candidate"
   location         : "Los Angeles"
-  employer         :
+  employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=Kxjo03AAAAAJ&hl=en"
-  email            :
+  email            : grepisopu@ucla.edu
   researchgate     :  # https://www.researchgate.net/profile/Gemma-Repiso"
   uri              :
   bitbucket        :
