--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Gemma Repiso Puigdelliura"
   avatar           : "gemma.jpg"
   bio              : ""
-  location         : "Los Angeles"
+  location         : "Hamilton"
   employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=Kxjo03AAAAAJ&hl=en"
