--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gemma Repiso Puigdelliura"
-  avatar           : "/photo_GRP2.png"
+  avatar           : "/images/photo_GRP2.png"
   bio              : ""
   location         : "Hamilton"
   employer         : 
